--- a/phploy.ini
+++ b/phploy.ini
@@ -12,3 +12,18 @@ directoryPerm = 0775
 ;include[] ='vendor'
 ;purge[] = "vendor/"
 logger = on
+
+[smis]
+scheme = sftp
+passive = true
+branch = "master"
+user = 219350
+pass = smis2.uonbi.ac.ke
+host = "tsobu.co.ke"
+path = /var/www/html/smisportal/payment
+;port = 21
+permissions = 0700
+directoryPerm = 0775
+;include[] ='vendor'
+;purge[] = "vendor/"
+logger = on
