--- a/phploy.ini
+++ b/phploy.ini
@@ -18,8 +18,8 @@ scheme = sftp
 passive = true
 branch = "master"
 user = 219350
-pass = smis2.uonbi.ac.ke
-host = "tsobu.co.ke"
+pass = barasa350
+host = "smis2.uonbi.ac.ke"
 path = /var/www/html/smisportal/payment
 ;port = 21
 permissions = 0700
