--- a/phploy.ini
+++ b/phploy.ini
@@ -24,6 +24,6 @@ path = /var/www/html/smisportal/payment
 ;port = 21
 permissions = 0700
 directoryPerm = 0775
-include[] ='vendor'
+;include[] ='vendor'
 ;purge[] = "vendor/"
 logger = on
