--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.0.0",
-    "jquery": "^3.3.1"
+    "fontawesome": "^4.7.2",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9"
   }
 }
