--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.0.0",
-    "fontawesome": "^4.7.2",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.12.9"
   }
