--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "nategood/httpful": "*",
         "catfan/medoo":"*",
         "safaricom/mpesa": "^1.0",
-        "vlucas/phpdotenv": "^2.4"
+        "vlucas/phpdotenv": "^2.4",
+        "guzzlehttp/guzzle": "^6.3"
     }
 }
