--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "catfan/medoo":"*",
         "safaricom/mpesa": "^1.0",
         "vlucas/phpdotenv": "^2.4",
-        "guzzlehttp/guzzle": "^6.3"
+        "guzzlehttp/guzzle": "^6.3",
+        "filp/whoops": "^2.1"
     }
 }
