--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "jquery.maskedinput": "^1.4.1",
     "popper.js": "^1.12.9"
   }
 }
