Added apache logger library

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "vlucas/phpdotenv": "^2.4",
         "guzzlehttp/guzzle": "^6.3",
         "filp/whoops": "^2.1",
-        "apache/log4php": "^2.3"
+        "apache/log4php": "^2.3",
+        "adodb/adodb-php": "^5.20"
     }
 }
