--- a/phploy.ini
+++ b/phploy.ini
@@ -2,9 +2,10 @@
 scheme = ftp
 passive = true
 branch = "master"
+;host = "tsobu.co.ke"
+host = "184.154.219.130"
 user = tsobucok
 pass = pz82Eok30B
-host = "tsobu.co.ke"
 path = /public_html/mpesa
 ;port = 21
 permissions = 0700
