created env exaample fiels

--- a/phploy.ini
+++ b/phploy.ini
@@ -12,7 +12,8 @@ permissions = 0700
 directoryPerm = 0775
 ;include[] ='vendor'
 ;purge[] = "vendor/"
-logger = on
+include[] = ".env"
+logger = off
 
 [smis]
 scheme = sftp
@@ -27,4 +28,5 @@ permissions = 0700
 directoryPerm = 0775
 ;include[] ='vendor'
 ;purge[] = "vendor/"
+include[] = ".env"
 logger = on
