created env exaample fiels

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "filp/whoops": "^2.1",
         "apache/log4php": "^2.3",
         "adodb/adodb-php": "^5.20",
-        "symfony/var-dumper": "^3.4"
+        "symfony/var-dumper": "^3.4",
+        "netresearch/jsonmapper": "^1.4"
     }
 }
