--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,6 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
-    "nategood/httpful": "*",
-    "catfan/medoo": "*",
-    "safaricom/mpesa": "^1.0",
     "vlucas/phpdotenv": "^2.4",
     "guzzlehttp/guzzle": "^6.3",
     "filp/whoops": "^2.1",
@@ -22,9 +19,12 @@
     "adodb/adodb-php": "^5.20",
     "symfony/var-dumper": "^3.4",
     "netresearch/jsonmapper": "^1.4",
-    "edwinmugendi/sapamapay": "dev-master"
+    "ext-json": "^7.4",
+    "safaricom/mpesa": "^1.0",
+    "catfan/medoo": "^1.7",
+    "nategood/httpful": "^0.3.2",
+    "symfony/dotenv": "^5.1"
   },
   "require-dev": {
-    "ext-json": "^7.4"
   }
 }
